client/src/components/Overlay/Overlay.css
.swipeBack { 
    position: absolute;
    z-index: 99999;
    background-image:url("../../files/images/swipeBtn.png");
    background-repeat: no-repeat;
    background-position-y: 50%; 
    background-position-x: 5px;
    opacity: 0.8;
} 
.swipeBack_r { 
    width: 50px;
    height: 100%;
    right: 0px;
} 
.swipeBack_l {
    width: 50px;
    height: 100%;
    background-repeat: no-repeat;
    background-position-y: 50%;
    -webkit-transform: rotate(30deg);
    transform: rotate(-180deg);
    background-position-x: 5px;
}
.swipeBack_t {
    width: 100%;
    height: 80px; 
    top: 0px; 
    -webkit-transform: rotate(30deg);
    transform: rotate(-90deg);
    background-position-y: 50%;
    background-position-x: 258px;
}
.swipeBack_b {
    width: 100%;
    height: 80px; 
    bottom: 0px;
    transform: rotate(90deg);
    background-position-y: 50%;
    background-position-x: 208px;
}
 
.menu {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    pointer-events: none;
    z-index: 150;
}
.menu--visible {
    pointer-events: auto;
}
.app-menu {
    background-color: #fff;
    position: relative;
    width: 95%;
    margin-left: 5%;
    height: 100%;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
    -webkit-transform: translateX(103%);
            transform: translateX(103%);

    display: flex;
    flex-direction: column;
    will-change: transform;
    z-index: 160;
    pointer-events: auto;
    
    height: 100%;
    position: absolute;
    overflow-y: scroll;
}
.app-menu_l-r {
    -webkit-transform: translateX(-103%);
    transform: translateX(-103%); 
    margin-left: 0%;
}
.app-menu_b-t {
    -webkit-transform: translateY(103%);
    transform: translateY(103%); 
    width: 95%;
    margin-left: 2.5%; 
    margin-top: 2.5%;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
}
.app-menu_t-b {
    -webkit-transform: translateY(-103%);
    transform: translateY(-103%); 
    width: 95%;
    height: 98.5%;
    margin-left: 2.5%; 
    margin-bottom: 2.5%;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
}


.menu--visible .app-menu {
    -webkit-transform: none;
            transform: none;
}
.menu--animatable .app-menu {
    transition: all 130ms ease-in;
}
.menu--visible.menu--animatable  .app-menu {
    transition: all 330ms ease-out;
}
.menu:after {
    content: '';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.4);
    opacity: 0;
    will-change: opacity;
    pointer-events: none;
    transition: opacity 0.3s cubic-bezier(0,0,0.3,1);
}
.menu--visible.menu:after {
    opacity: 1;
    pointer-events: auto;
}

